Fixing overflow on main page on small screens

--- a/css_reworks/Vector.css
+++ b/css_reworks/Vector.css
@@ -1486,6 +1486,7 @@ ul#filetoc {
 #fpplatformlinks {
     flex: 1 1;
     max-width: 900px;
+    width: 100%;
     max-width: max-content;
 }
 #fpsociallinks {
@@ -1505,7 +1506,6 @@ ul#filetoc {
 
 /* Welcome box links */
 #fpsociallinks {
-    width: max-content;
     padding-right: 1em;
 }
 #fpsociallinks .fp-icon-flex {
